# Django-Mysql

./: .gitignore  README.md  pyproject.toml  requirements.txt
DB/: db.sqlite3  mysql_setting.py
DB/DB/: asgi.py  settings.py  urls.py  wsgi.py
DB/sql/: admin.py  models.py  views.py
RestAPI/RestAPI/: urls.py
RestAPI/orm/: serializers.py
