[tool.poetry]
name = "RestAPI"
version = "0.1.0"
description = "Django-RestAPI"
authors = ["kimundong <kimud6003@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
Markdown = "^3.3.7"
django-filter = "^21.1"
cmake = "^3.22.4"
dlib = "^19.24.0"
mysqlclient = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
